@@ -12,6 +12,10 @@
         the PSy layer passed 'cell' to the kernel rather than 
         'cmap(colour, cell)'.
 
+        4) #542 generate correct OpenMP private list. This was actually
+        fixed by the changes made under #360 (change 2 above) so this
+        ticket only adds a test for this functionality.
+
 release 1.2.0
 
 	1) #415 Support for parsing stencil information supplied in
